Fixed back to our rev layout bug

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -283,6 +283,7 @@ a.banner {
   position: absolute;
   left: 0;
   right:0;
+  top:0;
   background: lighten($blue,10);
   color: white;
   font-weight: 700;
